// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with logo 1`] = `
<DocumentFragment>
  <a
    href="/companies/rithm"
  >
    <div
      class="card"
    >
      <h5
        class="card-title"
      >
        Rithm School
      </h5>
      <div
        class="card-footer"
      >
        Become an exceptional developer in 16 weeks.
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`matches snapshot without logo 1`] = `
<DocumentFragment>
  <a
    href="/companies/algo"
  >
    <div
      class="card"
    >
      <h5
        class="card-title"
      >
        Algo School
      </h5>
      <div
        class="card-footer"
      >
        Become a mediocre developer in 160 weeks.
      </div>
    </div>
  </a>
</DocumentFragment>
`;
